--- a/templates/base.html
+++ b/templates/base.html
@@ -2,16 +2,15 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Simple Login </title>
+    <title>Simple Crawler </title>
     {% load static %}
-<link href="{% static 'bootstrap/css/bootstrap.min.css' %}"  rel="stylesheet">
-<link href="{% static 'bootstrap/login.css' %}"  rel="stylesheet">
+    <link href="{% static 'bootstrap/css/bootstrap.min.css' %}"  rel="stylesheet">
+    <link href="{% static 'bootstrap/login.css' %}"  rel="stylesheet">
 </head>
 <body>
     {% include 'navbar.html' %}
     {% block content %}
         replace me
-
     {% endblock %}
 </body>
 </html>
