--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -1,6 +1,5 @@
-{% url 'register-link' as register_url %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="#">Login Sample</a>
+  <a class="navbar-brand" href="#">Scrawler Sample</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
@@ -8,10 +7,10 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" href="{% url 'home' as home_url %}">Login <span class="sr-only"></span></a>
+        <a class="nav-link" href="#"> <span class="sr-only"></span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{{ register_url }}">Register</a>
+        <a class="nav-link"></a>
       </li>
     </ul>
   </div>
