--- a/Mainc/templates/Main_page.html
+++ b/Mainc/templates/Main_page.html
@@ -5,7 +5,7 @@
         <form method="post"> {% csrf_token %}
           <div class="form-group">
             <label>Url Address</label>
-            <input type="url" class="form-control" id="urltext" aria-describedby="eurltextHelp" placeholder="Enter Url">
+            <input type="url" class="form-control" id="urltext" aria-describedby="eurltextHelp" placeholder="Enter Url" value="test">
           </div>
           <div class="form-group">
             <label>Specific Tag</label>
