--- a/Mainc/templates/Main_page.html
+++ b/Mainc/templates/Main_page.html
@@ -5,13 +5,20 @@
         <form method="post"> {% csrf_token %}
           <div class="form-group">
             <label>Url Address</label>
-            <input type="url" class="form-control" id="urltext" aria-describedby="eurltextHelp" placeholder="Enter Url" value="test">
+            <input type="url" class="form-control" id="urltext" name="urltext" aria-describedby="eurltextHelp" placeholder="Enter Url">
           </div>
           <div class="form-group">
             <label>Specific Tag</label>
-            <input type="text" class="form-control" id="urltag" aria-describedby="urltagHelp" placeholder="Enter Tag">
+            <input type="text" class="form-control" id="urltag" name="urltag" aria-describedby="urltagHelp" placeholder="Enter Tag">
           </div>
           <input type="submit" class="btn btn-primary" value="Sign In" >
         </form>
+        <div class="row">
+            <p>
+                {{ urltag }}
+
+            </p>
+        </div>
     </div>
+
 {% endblock %}
