--- a/Mainc/templates/Main_page.html
+++ b/Mainc/templates/Main_page.html
@@ -11,6 +11,10 @@
             <label>Specific Tag</label>
             <input type="text" class="form-control" id="urltag" name="urltag" aria-describedby="urltagHelp" placeholder="Enter Tag">
           </div>
+          <div class="form-group">
+            <label>Specific Class</label>
+            <input type="text" class="form-control" id="tagclass" name="tagclass" aria-describedby="urltagHelp" placeholder="Enter Class">
+          </div>
           <input type="submit" class="btn btn-primary" value="Sign In" >
         </form>
         <div class="row">
