--- a/Mainc/templates/Link_Actions.html
+++ b/Mainc/templates/Link_Actions.html
@@ -5,10 +5,10 @@
         <form method="post"> {% csrf_token %}
             <br/>
           <div class="form-group">
-              <a href="/Image/" type="submit" class="btn btn-primary" > Read All Image Links </a>
+              <a href="/Image/" type="submit" class="btn btn-primary" > Read and show All Image Links </a>
           </div>
           <div class="form-group">
-              <a href="/title of page/" type="submit" class="btn btn-primary" > Read title Tag </a>
+              <a href="/ReadByTag/" type="submit" class="btn btn-primary" > Read All items By Tag </a>
           </div>
         </form>
         <div class="row">
