--- a/Mainc/templates/Link_Actions.html
+++ b/Mainc/templates/Link_Actions.html
@@ -10,6 +10,9 @@
           <div class="form-group">
               <a href="/ReadByTag/" type="submit" class="btn btn-primary" > Read All items By Tag </a>
           </div>
+            <div class="form-group">
+              <a href="/ReadByTagAttribute/" type="submit" class="btn btn-primary" > Read All By Tag and Attribute </a>
+          </div>
         </form>
         <div class="row">
             <p>
