--- a/Mainc/templates/Link_Actions.html
+++ b/Mainc/templates/Link_Actions.html
@@ -8,6 +8,9 @@
               <a href="/Image/" type="submit" class="btn btn-primary" > Read and show All Image Links </a>
           </div>
           <div class="form-group">
+              <a href="/Ahref/" type="submit" class="btn btn-primary" > Read all links </a>
+          </div>
+          <div class="form-group">
               <a href="/ReadByTag/" type="submit" class="btn btn-primary" > Read All items By Tag </a>
           </div>
             <div class="form-group">
