--- a/Mainc/templates/Link_Actions.html
+++ b/Mainc/templates/Link_Actions.html
@@ -11,6 +11,9 @@
               <a href="/Ahref/" type="submit" class="btn btn-primary" > Read all links </a>
           </div>
           <div class="form-group">
+              <a href="/Heading/" type="submit" class="btn btn-primary" > Read all Heading </a>
+          </div>
+          <div class="form-group">
               <a href="/ReadByTag/" type="submit" class="btn btn-primary" > Read All items By Tag </a>
           </div>
             <div class="form-group">
