--- a/Mainc/templates/Link_Actions.html
+++ b/Mainc/templates/Link_Actions.html
@@ -8,16 +8,19 @@
               <a href="/Image/" type="submit" class="btn btn-primary" > Read and show All Image Links </a>
           </div>
           <div class="form-group">
-              <a href="/Ahref/" type="submit" class="btn btn-primary" > Read all links </a>
+              <a href="/Ahref/" type="submit" class="btn btn-success" > Read all links </a>
           </div>
           <div class="form-group">
               <a href="/Heading/" type="submit" class="btn btn-primary" > Read all Heading </a>
           </div>
           <div class="form-group">
-              <a href="/ReadByTag/" type="submit" class="btn btn-primary" > Read All items By Tag </a>
+              <a href="/ReadByTag/" type="submit" class="btn btn-success" > Read All items By Tag </a>
           </div>
-            <div class="form-group">
+         <div class="form-group">
               <a href="/ReadByTagAttribute/" type="submit" class="btn btn-primary" > Read All By Tag and Attribute </a>
+          </div>
+         <div class="form-group">
+              <a href="/ReadWordPressPrices/" type="submit" class="btn btn-success" > Read All By Wordpress prices </a>
           </div>
         </form>
         <div class="row">
