--- a/Mainc/templates/Link_Actions.html
+++ b/Mainc/templates/Link_Actions.html
@@ -21,7 +21,10 @@
           </div>
          <div class="form-group">
               <a href="/ReadWordPressPrices/" type="submit" class="btn btn-success" > Read All By Wordpress prices </a>
-          </div>
+         </div>
+         <div class="form-group">
+              <a href="/ReadSitemap/" type="submit" class="btn btn-success" > Read All ReadSitemap </a>
+         </div>
         </form>
         <div class="row">
             <p>
