--- a/Mainc/templates/ReadSitemap_page.html
+++ b/Mainc/templates/ReadSitemap_page.html
@@ -11,9 +11,7 @@
         </form>
         <div class="row">
             <p>
-                {% for key, value in images.items %}
-                     <img src="{{ value }}" width="20%">
-                {% endfor %}
+                {{ urltag }}
             </p>
         </div>
     </div>
